# tron_ai

./: README.md  pyproject.toml
src/: main.py  registers.py  scrape.py  settings.py
src/ai/: chat_endpoint.py  embeddings_endpoint.py  prompt.py
src/ai/prompts/: chat.yml  find_embeddings.yml
src/util/: register.py
